# arraymap

./: LICENSE.md  README.md  README.rst  arraymap.c  pyproject.toml  requirements-dev-3_08.txt  requirements-dev-3_11.txt  requirements-dev-3_12.txt  requirements-dev-3_13.txt  requirements-test-backward.txt  requirements-test-forward.txt  requirements-test.txt  setup.py  tasks.py  test_automap_unit.py
.github/workflows/: ci.yml
doc/articles/: get-all-any.py  npy-opt.py
test/: test_property.py  test_unit.py
